Added Dummy data

--- a/assets/variable.css
+++ b/assets/variable.css
@@ -2,6 +2,7 @@
   --main-bg-color: #fff;
   --link-color: #517ddc;
   --grey: grey;
+  --border-color: #d1d5da;
   --white: #fff;
   --black: #24292e;
 }
