--- a/assets/custom.css
+++ b/assets/custom.css
@@ -8,10 +8,13 @@ a:hover {
 }
 
 .container {
-  padding: 1em !important;
+  max-width: 1280px;
+  /* padding: 1em !important; */
+  margin: 0 auto;
 }
 
 .flex {
+  width: 100%;
   display: flex;
   align-items: center;
 }
