--- a/assets/custom.css
+++ b/assets/custom.css
@@ -8,8 +8,7 @@ a:hover {
 }
 
 .container {
-  max-width: 1280px;
-  /* padding: 1em !important; */
+  max-width: 1280px !important;
   margin: 0 auto;
 }
 
